--- a/desafios/s012/style.css
+++ b/desafios/s012/style.css
@@ -1,13 +1,27 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+
+:root {
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
+}
+
 * {
     margin: 0px;
     padding: 0px;
+    
 }
 
 html, body {
     min-height: 100vh;
     background-color: darkgrey;
+   
+    font-size: 32px
 }
 
 header {
@@ -18,11 +32,16 @@ header {
 
 header > h1 {
     padding-top: 50px;
+    font-size: 8vh;
     font-variant: small-caps;
+    font-family: var(--fonte2)
+    
 }
 
 header > p {
     padding-bottom: 50px;
+    font-family: var(--fonte1);
+    font-size: 17px
 }
 
 section {
@@ -30,6 +49,8 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 3vh
 }
 
 section.normal {
@@ -45,6 +66,7 @@ section.imagem {
 section.imagem > p {
     width: 400px;
     background-color: rgba(0, 0, 0, 0.34);
+    padding-left: 1%;
 }
 
 a {
@@ -62,4 +84,7 @@ footer {
     text-align: center;
     color: white;
     padding: 10px;
+    font-size: 15px;
+    font-family: var(--fonte1)
+    
 }
