finalização do projeto cordel

--- a/desafios/s012/style.css
+++ b/desafios/s012/style.css
@@ -53,6 +53,10 @@ section {
     font-size: 3vh
 }
 
+section > p {
+    padding-bottom: 2em;
+}
+
 section.normal {
     background-color: white;
     color: black;
@@ -61,12 +65,28 @@ section.normal {
 section.imagem {
     background-color: rgb(45, 41, 41);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.526);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
     width: 400px;
-    background-color: rgba(0, 0, 0, 0.34);
+    background-color: rgba(0, 0, 0, 0.512);
     padding-left: 1%;
+    text-shadow: 1px 1px 0px black;
+}
+
+section#img01 {
+    background-image: url('imagens/background001.jpg');
+    background-position: right center;
+    
+}
+
+section#img02 {
+    background-image: url('imagens/background002.jpg');
+    
+    
 }
 
 a {
