--- a/exercicios/ex026/mq002/estilos/retrato.css
+++ b/exercicios/ex026/mq002/estilos/retrato.css
@@ -2,5 +2,5 @@
 
 body {
     background-image: url(../imagens/cev-portrait.jpg);
-    background-position: center bottom;
+    background-position: center top;
 }
