--- a/exercicios/ex026/mq005/estilos/style.css
+++ b/exercicios/ex026/mq005/estilos/style.css
@@ -2,6 +2,13 @@
 
 * {
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0px;
+    padding: 0px;
+    
+}
+
+body {
+    background-color: lightgray;
 }
 
 header {
@@ -9,5 +16,62 @@ header {
 }
 
 header > h1 {
-    font-display: center;
+    padding: 10px;
+    text-align: center;
+}
+
+menu {
+    display: none;
+}
+
+menu > ul {
+    list-style-type: none;
+}
+menu > ul > li > a {
+    display: block;
+    padding: 10px;
+    text-decoration: none;
+    text-align: center;
+    background-color: rgb(139, 139, 139);
+    color: white;
+    border-top: 2px solid rgb(101, 101, 101);
+}
+
+span#burguer {
+    background-color: rgb(52, 52, 52);
+    color: white;
+    display: block;
+    text-align: center;
+    padding: 10px;
+    cursor: pointer;
+}
+
+span#burguer:hover {
+    background-color: white;
+    color: black;
+}
+
+menu > ul > li > a:hover {
+    background-color: rgb(97, 97, 97);
+}
+
+main {
+    width: vh;
+    background-color: white;
+    margin: auto;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 10px;
+    padding: 10px;
+    border-radius: 10px;
+    
+}
+
+article > h2 {
+    padding-bottom: 20px;
+}
+article > p {
+    text-align: justify;
+    margin-bottom: 10px;
+    text-indent: 20px;
 }
