--- a/DevMidia/exercicios/pagina de seguros/style.css
+++ b/DevMidia/exercicios/pagina de seguros/style.css
@@ -6,9 +6,7 @@ html {
 
 body {
     background-color: white;
-    margin: 50px 60px;
-    padding: 50px;
-    width: auto;
+    
 
 }
 
@@ -20,6 +18,8 @@ h1 {
     border-radius: 0px 40px 40px 0px;
     border-left: 10px solid black;
     padding: 10px;
+    margin-top: 0;
+    margin-bottom: 10px;
 }
 
 img {
@@ -30,6 +30,9 @@ img {
 div {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     line-height: 25px;
+    width: 600px;
+    margin: 20px auto;
+    padding: 40px 60px 60px 60px;
 }
 
 ul {
@@ -41,5 +44,5 @@ a {
     border-radius: 20px;
     text-decoration: none;
     color: white;
-    padding: 10px;
+    padding: 10px 15px;
 }
