--- a/DevMidia/exercicios/paradaria plus/style.css
+++ b/DevMidia/exercicios/paradaria plus/style.css
@@ -15,13 +15,15 @@ body {
 
 .cabecalho a {
     padding: 10px;
-    font-size: 20px;
+    font-size: 18px;
     color: #69482A;
 }
 
 .secao-sobre {
     border-top: 1px solid #DE8E37;
     text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 15px;
 }
 
 .secao-sobre .sobre-destaque {
@@ -30,4 +32,38 @@ body {
 
 .secao-sobre img {
     width: 700px;
+   
+}
+
+.secao-produtos {
+    background-color: #DE8E37;
+    color: white;
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding: 10px;
+    margin: 30px 0px;
+    line-height: 30px;
+}
+
+.secao-produtos img {
+    width: 400px;
+}
+
+.secao-produtos h4 {
+    font-size: 20px;
+}
+
+.secao-contato {
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.secao-contato span {
+    font-weight: bold;
+}
+
+.secao-contato a {
+    text-decoration: none;
+    font-weight: bold;
+    color: black;
 }
