inicio do css do projeto

--- a/DevMidia/Projetos/Imobiliária/style.css
+++ b/DevMidia/Projetos/Imobiliária/style.css
@@ -1,1 +1,59 @@
 @charset "UTF-8";
+
+body {
+    margin: none;
+    font-family: tahoma;    
+}
+
+div {
+    padding: 30px 0px;
+    text-align: center;
+}
+
+p {
+    margin: 10px auto;
+    width: 980px;
+    text-align: justify;
+    font-size: 18px;
+    line-height: 28px;
+}
+
+span {
+    font-weight: bold;
+}
+
+.secao1 {
+    background-color: #afddfb;
+}
+
+.secao1 img {
+    width: 150px;
+}
+
+.secao1 p {
+    margin-top: 15px;
+    margin-bottom: 25px;
+    text-align: center;
+}
+
+.secao1 a {
+    font-size: 18px;
+    color: #1d1d1d;
+    border-bottom: 2px solid #1d1d1d;
+    text-decoration: none;
+    margin: none 10px;
+}
+
+.secao2 {
+    margin-top: 50px;
+    padding-top: none;
+}
+
+.secao3 h2 {
+    color: #1d1d1d;
+    margin-bottom: 5px;
+}
+
+.secao h3 {
+    color: #1c81c0;
+}
