--- a/DevMidia/Projetos/Cafeteria/style.css
+++ b/DevMidia/Projetos/Cafeteria/style.css
@@ -10,30 +10,89 @@
     width: 100%;
     position: fixed;
     z-index: 1;
+    background-color: #604829;
 }
 
-.banner {
-    height: 100vh;
-    background-image: url(imagens/parallax-imagem1.png);
-    background-attachment: fixed;
-    background-position: center;
-    background-size: cover;
-}
-
-.lista li div {
-    width: 70%;
-    height: 1px;
-    background-color: #acacac;
+.topo div{
     position: absolute;
+    top: 35%;
+    right: 15%;
+}
+
+.topo img {
+    position: relative;
+    width: 100px;
+    left: 10%;
+}
+
+.topo div a {
+    font-family: "Oswald";
+    color: #C2A27A;
+    text-decoration: none;
+    text-shadow: rgba(0, 0, 0, 0.63) 2px 3px ;
+    font-size: 18px;
+    padding: 10px;
+}
+
+
+.container-parallax1 {
+    background-image: url(imagens/parallax-imagem1.png);
+    height: 100vh;
+}
+
+.container-parallax1 h1 {
+    text-align: center;
+    color: white;
+    position: absolute;
+    top: 45%;
+    right: 0%;
+    left: 0%;
+    font-family: "Fraunces", serif;
+    font-size: 100px;
+}
+
+.container-parallax2 {
+    background-image: url(imagens/parallax-imagem2.jpg);
+    width: 100%;
+    height: 50vh;
+}
+
+.container-parallax3 {
+    background-image: url(imagens/parallax-imagem3.jpg);
+    width: 100%;
+    height: 50vh;
+}
+
+.container-parallax2 h3, .container-parallax3 h3 {
+    position: relative;
+    text-align: center;
+    top: 45%;
+    left: 0%;
+    right: 0%;
+    background-color: #604829;
+    color: white;
+    font-family: "Fraunces";
+    width: 500px;
+    padding: 10px;
+    margin: auto;
+    font-style: italic;
+    font-weight: 400;
+
+}
+
+.contatos {
+    background-image: url(imagens/parallax-imagem4.png);
+    width: 100%;
+    height: 100vh;
+}
+
+.contatos h2 {
+    text-align: center;
+    background-color: #604829;
+    width: 400px;
+    margin: 0px;
+    top: 10%;
     left: 0;
     right: 0;
-    margin: 0 auto;
-    bottom: 50%;
+    
 }
-
-.lista li span {
-    position: absolute;
-    top: 0;
-    right: 0;
-}
-
