--- a/DevMidia/Projetos/Cafeteria/style.css
+++ b/DevMidia/Projetos/Cafeteria/style.css
@@ -149,5 +149,30 @@
 .horarios h2 {
     text-align: center;
     font-family: "Oswald", sans-serif;
-    
+    position: relative;
+    left: 0%;
+    right: 0;
+    top: 20%;
+    margin: auto;
+    text-align: center;
+}
+
+.lista {
+    max-width: 768px;
+    position: absolute;
+    margin: 0 auto;
+    bottom: 20%;
+    right: 0;
+    left: 0;
+    list-style: none;
+    font-family: "oswald";
+}
+
+.lista li {
+    position: relative;
+}
+
+.lista li h3 {
+    margin-bottom: 20px;
+    color: white;
 }
